Fixed spacing

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ font-family: Arial, Helvetica, sans-serif;
 .header {
 
 display: flex;
-justify-content: space-between;
+justify-content: space-around;
 background-color: rgb(33, 41, 54);
-padding: 8px 100px;
+padding: 8px 0px;
 height: 40px;
 align-items: center;
 }
@@ -20,8 +20,8 @@ align-items: center;
 
     display: flex;
     background-color: rgb(33, 41, 54);
-    padding: 8px 100px;
-    justify-content: space-between;
+    padding: 8px 50px;
+    justify-content: space-around;
     height: 220px;
 
 }
